# pico-FDCT

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/: test.cpp
src/debug/: StampPrintf.cpp  StampPrintf.h
src/hw/: init.cpp  init.h
src/macros/: defines.h
src/sigproc/: PicoDCT.h
src/util/: utility.h
